use Integer.valueOf instead of new Integer since it caches commonly used values
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@7536 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8